# kinetic-signals

./: .codacy.yml  .gitignore  AGENTS.md  Cargo.toml  Dockerfile  README.md  REVIEW.md  codecov.yml
.devin/: blueprint.yaml
.github/workflows/: ci.yml  coverage.yml  docker.yml  sentry-release.yml
docs/: boundary-matrix.md  sentry.md
examples/: demo.rs
src/: entropy.rs  gbm.rs  hawkes.rs  hurst.rs  indicators.rs  lib.rs  real.rs  stats.rs  surprise.rs  volatility.rs
tests/: cross_language_ranges.rs  deprecated_aliases.rs  sentry_feature.rs
tests/fixtures/: shared_vectors.json
