[package]
name = "kinetic-signals"
version = "0.4.0"
edition = "2024"
rust-version = "1.85"
authors = ["Raul Montoya Cardenas"]
description = "Streaming feature extraction for high-velocity stochastic signals."
license = "MIT OR Apache-2.0"
repository = "https://github.com/Limen-Neural/kinetic-signals"
homepage = "https://github.com/Limen-Neural/kinetic-signals"
documentation = "https://docs.rs/kinetic-signals"
readme = "README.md"
keywords = ["signals", "time-series", "stochastic", "hawkes", "surprise"]
categories = ["algorithms", "science"]
exclude = [
    ".codacy.yml",
    ".github/*",
    "AGENTS.md",
    "Dockerfile",
    "REVIEW.md",
    "codecov.yml",
    "docs/*",
]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg=docsrs"]

[dependencies]
sentry = { version = "0.48.2", optional = true }

[dev-dependencies]
serial_test = "3.0"
temp-env = "0.3.6"

[features]
default = []
sentry = ["dep:sentry"]

[profile.release]
opt-level = 3
lto = true
codegen-units = 1

[workspace]
